# Decentagram

./: .gitignore  A1_contracts_setup.sh  A2_contracts_tests.sh  B1_offchain_setup.sh  B2_contracts_deploy.py  B3_project_config.py  B4_report_credential.py  LICENSE  README.md
Revoker/: CMakeLists.txt  README.md
Revoker/src/: .gitignore  CMakeLists.txt  components_config.json
Revoker/src/Trusted/: Certs.hpp  Enclave.cpp  Enclave.edl  EthHeartbeatHandler.hpp  Keys.hpp
Revoker/src/Untrusted/: Main.cpp  Revoker.hpp  RunUntilSignal.hpp
Revoker/tests/: CMakeLists.txt
Revoker/tests/End2EndLatency/: CMakeLists.txt  Enclave.config.xml  components_config.json
Revoker/tests/End2EndLatency/Trusted/: Certs.hpp  Enclave.cpp  Enclave.edl  End2EndLatTest.hpp  Keys.hpp
Revoker/tests/End2EndLatency/Untrusted/: End2EndLatTester.hpp  Main.cpp
Revoker/tests/End2EndLatency/contracts/: GethProxy.py  GethProxyTester.py  HybridSubscriber.sol  Makefile  Oracle.sol
Revoker/tests/End2EndLatency/doc/: workflow.drawio
Revoker/tests/ProblematicApp/: CMakeLists.txt  components_config.json
Revoker/tests/ProblematicApp/Trusted/: Certs.hpp  Enclave.cpp  Enclave.edl  Keys.hpp  Problematic.hpp
Revoker/tests/ProblematicApp/Untrusted/: Main.cpp  ProblematicApp.hpp
libs/DecentEnclave/: CMakeLists.txt  LICENSE
libs/DecentEnclave/include/: CMakeLists.txt
libs/DecentEnclave/include/DecentEnclave/: CMakeLists.txt  Config.hpp
libs/DecentEnclave/include/DecentEnclave/Common/: AesGcmPackager.hpp  AesGcmSocketHandshaker.hpp  AesGcmStreamSocket.hpp  AuthList.hpp  CertStore.hpp  DecentCerts.hpp  DecentOid.hpp  DecentTlsConfig.hpp  DeterministicMsg.hpp  DevModeDefs.hpp  Exceptions.hpp  Keyring.hpp  KeyringKey.hpp  Logging.hpp  TlsSocket.hpp  Utils.hpp
libs/DecentEnclave/include/DecentEnclave/SgxEDL/: decent_attestation.edl  decent_common.edl  decent_tkey_exchange.edl  net_io.edl  sys_io.edl
libs/DecentEnclave/include/DecentEnclave/SgxEdgeSources/: AppLambdaHandler_t.cpp  Attestation_t.cpp  Attestation_u.cpp  Crypto_t.cpp  NetIO_u.cpp  README.md  SysIO_t.cpp  SysIO_u.cpp  decent_tkey_exchange.cpp  sys_io_t.h  sys_io_u.h
libs/EclipseMonitor/: CMakeLists.txt  LICENSE
libs/EclipseMonitor/docs/: flow_diagram.drawio
libs/EclipseMonitor/include/: CMakeLists.txt
libs/EclipseMonitor/include/EclipseMonitor/: Config.hpp  DataTypes.hpp  EclipseMonitorBase.hpp  Exceptions.hpp  Logging.hpp  MonitorReport.hpp  PlatformInterfaces.hpp  SyncMsgMgrBase.hpp
libs/SimpleBoostSelector/: CMakeLists.txt  LICENSE
libs/SimpleBoostSelector/cmake/: functions.cmake  sub_lib_meta.cmake
libs/SimpleBoostSelector/cmake/versions/: boost_1_79_0.cmake  boost_1_80_0.cmake  boost_1_81_0.cmake
libs/SimpleConcurrency/: CMakeLists.txt  LICENSE
libs/SimpleConcurrency/include/: CMakeLists.txt
libs/SimpleConcurrency/include/SimpleConcurrency/: CMakeLists.txt
libs/SimpleJson/: CMakeLists.txt  LICENSE
libs/SimpleJson/include/: CMakeLists.txt
libs/SimpleJson/include/SimpleJson/: BoolParser.hpp  CMakeLists.txt  DefaultTypes.hpp  DictParser.hpp  DictWriter.hpp  Exceptions.hpp  GenericObjectParser.hpp  InputStateMachine.hpp  ListParser.hpp  ListWriter.hpp  NullParser.hpp  NullWriter.hpp  ObjectWriter.hpp  ParserBase.hpp  RealNumParser.hpp  RealNumWriter.hpp  SimpleJson.hpp  StaticDictParser.hpp  StringParser.hpp  StringWriter.hpp  Utils.hpp  WriterConfig.hpp
libs/SimpleObjects/: .gitignore  CMakeLists.txt  LICENSE
libs/SimpleObjects/include/: CMakeLists.txt
libs/SimpleObjects/include/SimpleObjects/: BaseObject.hpp  BasicDefs.hpp  Bytes.hpp  BytesBaseObject.hpp  CMakeLists.txt  Compare.hpp  ConstSequence.hpp  DefaultTypes.hpp  Dict.hpp  DictBaseObject.hpp  Endianness.hpp  Exception.hpp  HashableBaseObject.hpp  HashableObject.hpp  Iterator.hpp  IteratorIf.hpp  IteratorStdCpp.hpp  IteratorZip.hpp  List.hpp  ListBaseObject.hpp  Null.hpp  Object.hpp  RealNum.hpp  RealNumBaseObject.hpp  RealNumCast.hpp  RealNumCompare.hpp  RealNumTraits.hpp  RealNumTypeInfer.hpp  SimpleObjects.hpp  StaticDict.hpp  StaticDictBaseObject.hpp  String.hpp  StringBaseObject.hpp  ToString.hpp  ToStringImpl.hpp  Utils.hpp
libs/SimpleRlp/: CMakeLists.txt  LICENSE
libs/SimpleRlp/include/: CMakeLists.txt
libs/SimpleRlp/include/AdvancedRlp/: AdvancedRlp.hpp  CatArray.hpp  CatBoolean.hpp  CatBytes.hpp  CatDict.hpp  CatId.hpp  CatInteger.hpp  CatNull.hpp  CatStaticDict.hpp  CatString.hpp  Exceptions.hpp  GenericTransform.hpp  GenericWriter.hpp  ParserUtils.hpp  WriterUtils.hpp
libs/SimpleRlp/include/SimpleRlp/: BytesParser.hpp  CMakeLists.txt  Common.hpp  DefaultTypes.hpp  EthHeader.hpp  Exceptions.hpp  FailingParser.hpp  GeneralParser.hpp  InputStateMachine.hpp  ListParser.hpp  ParserBase.hpp  RlpDecoding.hpp  RlpEncoding.hpp  SimpleRlp.hpp  StaticDictParser.hpp  Writer.hpp
libs/SimpleSysIO/: .gitignore  CMakeLists.txt  LICENSE
libs/SimpleSysIO/include/: CMakeLists.txt
libs/SimpleSysIO/include/SimpleSysIO/: BinaryIOStreamBase.hpp  CMakeLists.txt  Config.hpp  Endianness.hpp  Exceptions.hpp  IOStreamBase.hpp  StreamAcceptorBase.hpp  StreamSocketBase.hpp
libs/SimpleUtf/: .gitignore  CMakeLists.txt  LICENSE
libs/SimpleUtf/include/: CMakeLists.txt
libs/SimpleUtf/include/SimpleUtf/: Exceptions.hpp  Utf.hpp  Utf16.hpp  Utf32.hpp  Utf8.hpp  UtfCommon.hpp
libs/mbedTLScpp/: CMakeLists.txt  LICENSE
libs/mbedTLScpp/cmake/: mbedTLScpp_UseMbedtlsHeaders.cmake
libs/mbedTLScpp/include/: CMakeLists.txt
libs/mbedTLScpp/include/mbedTLScpp/: BigNumber.hpp  CMakeLists.txt  CipherBase.hpp  Cmac.hpp  Common.hpp  Container.hpp  CppMutexIntf.hpp  CtrDrbg.hpp  DefaultRbg.hpp  DummySubInitializer.hpp  EcKey.hpp  EcKeyEnum.hpp  Entropy.hpp  EntropyInterfaces.hpp  Exceptions.hpp  Gcm.hpp  Hash.hpp  Hkdf.hpp  Hmac.hpp  HmacDrbg.hpp  LibInitializer.hpp  LoadedFunctions.hpp  MsgDigestBase.hpp  ObjectBase.hpp  PKey.hpp  PKeyEnum.hpp  RandInterfaces.hpp  SKey.hpp  SecretAllocator.hpp  SecretArray.hpp  SecretString.hpp  SecretStruct.hpp  SecretVector.hpp  Tls.hpp  TlsConfig.hpp  TlsPrf.hpp  TlsSessTktMgr.hpp  TlsSessTktMgrIntf.hpp  TlsSession.hpp  X509Cert.hpp  (+2 more)
(+343 files in other folders)
